<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Detail">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Ajouter_releve">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/rootView">

                    <LinearLayout
                        android:id="@+id/idGlieu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nom" />

                        <EditText
                            android:id="@+id/nom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/idGph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ph" />

                        <EditText
                            android:id="@+id/ph"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/idGdebit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/debit" />

                        <EditText
                            android:id="@+id/debit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/idGtemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temperature" />

                        <EditText
                            android:id="@+id/temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/idGCE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/conductivite_electrique" />

                        <EditText
                            android:id="@+id/conductivite_electrique"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/id_g_turb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/turbidite" />

                        <EditText
                            android:id="@+id/turbidite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/idGNOD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/niveaux_oxygen_dissous" />

                        <EditText
                            android:id="@+id/niveaux_oxygen_dissous"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/idGNP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nitrate_phosphate" />

                        <EditText
                            android:id="@+id/nitrate_phosphate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/idGML"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/metaux_lourd" />

                        <EditText
                            android:id="@+id/metaux_lourd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/idGSO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/substances_organiques" />

                        <EditText
                            android:id="@+id/substances_organiques"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/idGMO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/micros_organismes" />

                        <EditText
                            android:id="@+id/micros_organismes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/idGChlorophylle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chlorophylle" />

                        <EditText
                            android:id="@+id/chlorophylle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:inputType="numberDecimal" />

                    </LinearLayout>
                    <Button
                        android:id="@+id/btReconnaissance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RECONNAISSANCE DE TEXTE"/>

                    <Button
                        android:id="@+id/retour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RETOUR"/>


                    <Button
                        android:id="@+id/enregistrer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ENREGISTRER" />
                    <Button
                        android:id="@+id/supprimer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SUPPRIMER" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>